2003-01-06	blytkerchan
	* increment.c: new file
	* decrement.c: ditto

2003-10-18	blytkerchan
	* main.c: moved to ../test
	* Makefile: removed
	* compare_and_exchange.h: moved to ../include

2003-10-17	blytkerchan
	* main.c: add a new test for the case that should work

	* Makefile: new file
	* compare_and_exchange.c: ditto
	* compare_and_exchange.h: ditto
	* main.c: ditto