@@ -1,3 +1,7 @@
+2004-02-03	blytkerchan
+	* increment.c (atomic_increment): don't return a value
+	* decrement.c (atomic_decrement): ditto
+
 2003-01-06	blytkerchan
 	* increment.h: new file
 	* decrement.h: ditto
